[gd_scene load_steps=7 format=3 uid="uid://bwtsyqg37x6vq"]

[ext_resource type="PackedScene" uid="uid://dsh7i4eks64gc" path="res://gameplay/mechbody/mechbody.tscn" id="1_ji3mg"]
[ext_resource type="Script" path="res://gameplay/test_gameplay/mech_rigid_container.gd" id="1_wghhh"]
[ext_resource type="PackedScene" uid="uid://dlsarb7iw7bpi" path="res://test_player.tscn" id="2_hfoqc"]
[ext_resource type="Script" path="res://gameplay/test_gameplay/bitdata.gd" id="3_d61xc"]
[ext_resource type="PackedScene" uid="uid://bqnvrt4u18rnk" path="res://gameplay/mechbody/limb_physics/ragdoll_bit.tscn" id="4_k6vj2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0oolq"]

[node name="MechRigidContainer" type="Node3D" node_paths=PackedStringArray("mechbody")]
script = ExtResource("1_wghhh")
mechbody = NodePath("Mechbody")

[node name="Mechbody" parent="." instance=ExtResource("1_ji3mg")]
gravity_scale = 1.0

[node name="LeftArmPin2" type="JoltPinJoint3D" parent="Mechbody"]
node_a = NodePath("../../RagdollArmLeft/RagdollBitUArm")
node_b = NodePath("..")
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -3, -1.52016, 0)

[node name="RightArmPin2" type="JoltPinJoint3D" parent="Mechbody"]
node_a = NodePath("../../RagdollArmRight/RagdollBitUArm")
node_b = NodePath("..")
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3, -1.52016, 0)

[node name="Label3D3" type="Label3D" parent="Mechbody" node_paths=PackedStringArray("bit")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09512, -1.2153)
script = ExtResource("3_d61xc")
bit = NodePath("../../RagdollArmRight/RagdollBitUArm")

[node name="seatparent" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.705581, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="seatparent"]
shape = SubResource("BoxShape3D_0oolq")

[node name="XROrigin3D" parent="seatparent" instance=ExtResource("2_hfoqc")]

[node name="JoltGeneric6DOFJoint3D" type="JoltGeneric6DOFJoint3D" parent="."]
linear_limit_spring_x/frequency = 20.0
linear_limit_spring_y/frequency = 20.0
linear_limit_spring_z/frequency = 5.0
linear_spring_x/enabled = true
linear_spring_x/frequency = 7.0
linear_spring_y/enabled = true
linear_spring_y/frequency = 7.0
linear_spring_z/enabled = true
linear_spring_z/frequency = 7.0
angular_spring_x/enabled = true
angular_spring_x/frequency = 7.0
angular_spring_y/enabled = true
angular_spring_y/frequency = 7.0
angular_spring_z/enabled = true
angular_spring_z/frequency = 7.0
node_a = NodePath("../Mechbody")
node_b = NodePath("../seatparent")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.65933, 0)

[node name="RagdollArmLeft" type="Node3D" parent="."]

[node name="RagdollBitUArm" parent="RagdollArmLeft" node_paths=PackedStringArray("target_node", "pin") instance=ExtResource("4_k6vj2")]
transform = Transform3D(-1, -8.74227e-08, 8.74227e-08, 8.74228e-08, -1, 8.10592e-07, 8.74227e-08, 8.10592e-07, 1, -2.995, -1.50806, -2.42874)
target_node = NodePath("../../Mechbody/Cockpit/ArmBaseLeft/ShoulderJoint/KinematicArm/Armature/Skeleton3D/Cube_002")
pin = NodePath("JoltPinJoint3D3")

[node name="JoltPinJoint3D3" type="PinJoint3D" parent="RagdollArmLeft/RagdollBitUArm"]
transform = Transform3D(1, -1.90115e-16, 0, -1.90115e-16, 1, 0, 0, 0, 1, 0, 0, 0)
node_a = NodePath("..")
node_b = NodePath("../../RagdollBitFArm")
solver_priority = 2
params/bias = 0.83

[node name="RagdollBitFArm" parent="RagdollArmLeft" node_paths=PackedStringArray("target_node", "pin") instance=ExtResource("4_k6vj2")]
transform = Transform3D(-1, -2.2205e-16, -1.50996e-07, -2.22045e-16, 1, -3.55271e-14, 1.50996e-07, -3.55271e-14, -1, -2.995, -1.50254, -5.2075)
target_node = NodePath("../../Mechbody/Cockpit/ArmBaseLeft/ShoulderJoint/KinematicArm/Armature/Skeleton3D/Cube_001")
pin = NodePath("JoltPinJoint3D2")

[node name="JoltPinJoint3D2" type="PinJoint3D" parent="RagdollArmLeft/RagdollBitFArm"]
transform = Transform3D(1, 8.91683e-24, 0, 8.91683e-24, 1, 0, 0, 0, 1, 0, 0, 0)
node_a = NodePath("..")
node_b = NodePath("../../RagdollBitHand")
solver_priority = 2
params/bias = 0.83

[node name="RagdollBitHand" parent="RagdollArmLeft" node_paths=PackedStringArray("target_node") instance=ExtResource("4_k6vj2")]
transform = Transform3D(-1, 8.74228e-08, 8.74227e-08, -8.74228e-08, -1, -2.71429e-08, 8.74227e-08, -2.71429e-08, 1, -2.995, -1.18157, -8.48853)
target_node = NodePath("../../Mechbody/Cockpit/ArmBaseLeft/ShoulderJoint/KinematicArm/Armature/Skeleton3D/Cube")

[node name="RagdollArmRight" type="Node3D" parent="."]

[node name="RagdollBitUArm" parent="RagdollArmRight" node_paths=PackedStringArray("target_node", "pin") instance=ExtResource("4_k6vj2")]
transform = Transform3D(-1, -8.74227e-08, 8.74227e-08, 8.74228e-08, -1, 8.10592e-07, 8.74227e-08, 8.10592e-07, 1, 3.005, -1.50806, -2.42874)
target_node = NodePath("../../Mechbody/Cockpit/ArmBaseRight/ShoulderJoint/KinematicArm/Armature/Skeleton3D/Cube_002")
pin = NodePath("JoltPinJoint3D3")

[node name="JoltPinJoint3D3" type="PinJoint3D" parent="RagdollArmRight/RagdollBitUArm"]
transform = Transform3D(1, -1.90115e-16, 0, -1.90115e-16, 1, 0, 0, 0, 1, 0, 0, 0)
node_a = NodePath("..")
node_b = NodePath("../../RagdollBitFArm")
solver_priority = 2
params/bias = 0.83

[node name="RagdollBitFArm" parent="RagdollArmRight" node_paths=PackedStringArray("target_node", "pin") instance=ExtResource("4_k6vj2")]
transform = Transform3D(-1, -2.2205e-16, -1.50996e-07, -2.22045e-16, 1, -3.55271e-14, 1.50996e-07, -3.55271e-14, -1, 3.005, -1.50254, -5.2075)
target_node = NodePath("../../Mechbody/Cockpit/ArmBaseRight/ShoulderJoint/KinematicArm/Armature/Skeleton3D/Cube_001")
pin = NodePath("JoltPinJoint3D2")

[node name="JoltPinJoint3D2" type="PinJoint3D" parent="RagdollArmRight/RagdollBitFArm"]
transform = Transform3D(1, 8.91683e-24, 0, 8.91683e-24, 1, 0, 0, 0, 1, 0, 0, 0)
node_a = NodePath("..")
node_b = NodePath("../../RagdollBitHand")
solver_priority = 2
params/bias = 0.83

[node name="RagdollBitHand" parent="RagdollArmRight" node_paths=PackedStringArray("target_node") instance=ExtResource("4_k6vj2")]
transform = Transform3D(-1, 8.74228e-08, 8.74227e-08, -8.74228e-08, -1, -2.71429e-08, 8.74227e-08, -2.71429e-08, 1, 3.005, -1.18157, -8.48853)
target_node = NodePath("../../Mechbody/Cockpit/ArmBaseRight/ShoulderJoint/KinematicArm/Armature/Skeleton3D/Cube")
